// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main notes query all: raw-props 1`] = `
Object {
  "body": "",
  "children": Array [],
  "created": 1593699110461,
  "data": Object {},
  "desc": "",
  "fname": "foo.one",
  "parent": "foo",
  "stub": false,
  "title": "foo.one",
  "type": "note",
  "updated": 1593699110461,
}
`;

exports[`main notes query with missing: missing snapshots 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
      "bar",
    ],
    "created": 1593699110447,
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
    "updated": 1593699110447,
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "created": 1593699110447,
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
    "updated": 1593699110447,
  },
  Object {
    "body": "",
    "children": Array [
      "bar.one",
    ],
    "created": 1593699110449,
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "parent": "root",
    "stub": true,
    "title": "bar",
    "type": "note",
    "updated": 1593699110449,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110448,
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
    "updated": 1593699110448,
  },
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110448,
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
    "updated": 1593699110448,
  },
  Object {
    "body": "",
    "children": Array [
      "bar.one.alpha",
    ],
    "created": 1593699110449,
    "data": Object {},
    "desc": "",
    "fname": "bar.one",
    "parent": "bar",
    "stub": true,
    "title": "bar.one",
    "type": "note",
    "updated": 1593699110449,
  },
  Object {
    "body": "bar alpha content
",
    "children": Array [],
    "created": 1593699110449,
    "data": Object {},
    "desc": "",
    "fname": "bar.one.alpha",
    "parent": "bar.one",
    "stub": false,
    "title": "bar.one.alpha",
    "type": "note",
    "updated": 1593699110449,
  },
]
`;

exports[`main notes write writeQuery: data snapshot 1`] = `
"bond
"
`;

exports[`main schema write writeRoot: data snapshot 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [],
    "created": 1593699110491,
    "data": Object {},
    "desc": "",
    "fname": "root.schema",
    "id": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "schema",
    "updated": 1593699110491,
  },
]
`;
